--- a/client/app/globals.css
+++ b/client/app/globals.css
@@ -15,7 +15,10 @@
 }
 
 body {
+  margin: 0 0 0 0;
+  padding: 0 0 0 0;
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
+  height: 100vh;
 }
